Prevent horizontal scrolling observed in Chrome due to the length of the layer div.

--- a/app/styles/nav-stack.scss
+++ b/app/styles/nav-stack.scss
@@ -10,6 +10,7 @@ $easing: cubic-bezier(.23, 1, .32, 1);
   width: 100%;
   height: 100%;
   will-change: transform;
+  overflow: hidden;
 
   &--layer0 {
     transform: translateY(0);
